# space-sim

./: .gitignore  CHANGELOG.md  Notes.md  README.md  elm-tooling.json  elm-watch.json  elm.json  index.html  package-lock.json  package.json  run-pty.json  shell.nix  space-sim.cabal  vite-elm-fork.js  vite.config.js
.github/workflows/: ci.yml  test-pr.yml
app/: Debug.hs  Main.hs  Population.hs
app/Data/: Knowledge.hs  Star.hs
data/names/: afghan.txt  afghan_provinces.txt  algonquian.txt  klingon.txt  korean.txt
public/: elm-web-audio.js  elm.js  index.html  styles.css
review/: elm.json
review/src/: ReviewConfig.elm
review/suppressed/: NoMissingTypeAnnotationInLetIn.json
scripts/: get_data.py
src/: App.elm  Effect.elm  FormBuilder.elm  Galaxy2d.elm  Galaxy3d.elm  Id.elm  IdDict.elm  IdSet.elm  Main.elm  Markov.elm  NewGame.elm  Percent.elm  Playing.elm  Population.elm  Random.hs  Rate.elm  Route.elm  Scalable.elm  ScaledNumber.elm  Shared.elm  Testing.elm  Ui.elm  View.elm  main.js
src/Data/: Civilization.elm  EarthYear.elm  Knowledge.elm  Name.elm  Names.elm  Orbit.elm  Star.elm  StarDate.elm  Structure.elm
src/Dict/: Any.elm
src/Element/: Extra.elm
src/Extra/: Random.hs
src/Game/: Components.elm
src/Input/: MinMaxSlider.elm  Slider.elm  Spline.elm
src/List/: Nonempty.elm  Util.elm
src/Markov/: String.elm
src/Page/: Home.elm  NewGameObserve.elm  NewGameParticipate.elm  Playing.elm  Shared.elm
src/Set/: Any.elm
src/Ui/: Button.elm  Link.elm  Slider.elm  Text.elm  Theme.elm
src/Units/: Constants.hs  Length.hs  Percent.hs  Quantity.hs  (+1 more)
(+7 files in other folders)
