cabal-version:      2.4
name:               space-sim
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Wolfgang Schuster
maintainer:         wolfadex@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Units.Constants
        Units.Length
        Units.Quantity
        Units.Percent
        Units.Temperature
        Random

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        flow,
        random
    hs-source-dirs:   src
    default-language: Haskell2010

executable space-sim
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    ghc-options: -threaded

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        apecs,
        apecs-gloss,
        base ^>=4.16.3.0,
        containers,
        flow,
        gloss,
        linear,
        random,
        space-sim

    hs-source-dirs:   app
    default-language: Haskell2010
